--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ function Update ( esContext, deltaTime )
    userData.angle += ( deltaTime / 25.0 );
    if( userData.angle >= 360.0 )
        userData.angle -= 360.0;
-   float nt = deltaTime;
-    const fps = 1 / nt;    
+   //float nt = deltaTime;
+    const fps = 1 / deltaTime;    
    
     fpsElem.textContent = fps.toFixed(1);
 
